# bksystem

./: .gitignore  CMakeLists.txt  CREDITS  Makefile  Makefile.am  README  bksystem.desktop  bksystem.sh  bksystem.spec  configure.ac  db_path.txt
cmake/Modules/: FindEcore.cmake  FindEcore_File.cmake  FindEcore_X.cmake  FindEdbus.cmake  FindEdje.cmake  FindEet.cmake  FindEfreet.cmake  FindEina.cmake  FindElementary.cmake  FindEthumb.cmake  FindEvas.cmake
data/: CMakeLists.txt  bksystem.sh  bksystem.sqlite  empty.sqlite  example.sqlite
data/scripts/: backup.sh  bksystem.sh  bksystem.sh.in  export_bill_basic.sh  export_bill_complete_comb.sh  export_bill_complete_sep.sh  export_bill_html.sh  insert_bill_reference_date_into_db.sh  sub_txt_tmpl
data/theme/: elm_overlay.edc
doc/: CMakeLists.txt  bksystem_admin_de.html  bksystem_admin_eng.html  bksystem_database_de.html  bksystem_database_eng.html  bksystem_script_de.html  bksystem_script_eng.html  database_de.html  script_doc.html  script_doc_de.html  textstyle.css  toc.js
doc/SQL_Code/: get_date_now.txt  insert_date_now.txt  sales_cleanup.txt  user_querry_complete.txt  user_querry_cumulativ.txt
doc/doxygen/: Doxyfile.in  doxyconf  footerFile  headerFile
scripts/: backup.sh  export_bill_basic.sh  export_bill_complete_comb.sh  export_bill_complete_sep.sh  export_bill_html.sh  insert_bill_reference_date_into_db.sh  layout.css  restore_db.sh
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.old  bks_error.c  bksystem_scheme.sql  main.c
src/common/: bks_events.c  bks_job.c  bks_status.c  bks_thread_queue.c
src/controller/: Makefile  bks_controller.c  model.c  ui.c
src/controller/include/: Bks_Controller_Private.h
src/include/: Bks_Controller.h  Bks_Error.h  Bks_Events.h  Bks_Job.h  Bks_Model.h  Bks_Model_Product.h  Bks_Model_Sale.h  Bks_Model_User_Account.h  Bks_Status.h  Bks_System.h  Bks_Thread_Queue.h  Bks_Transaction.h  Bks_Types.h  Bks_Ui.h  Product.h  bks_transaction.x
src/model/: Bks_Model_Private.h  Bks_Model_Sql.h  Bks_Model_Threading.h  Makefile  bks_model.c  bks_model.h  bks_model_events.c  bks_model_path.c  bks_model_private.c  bks_model_private.h  bks_model_product.c  bks_model_product.h  bks_model_sale.c  bks_model_sql.c  bks_model_threading.c  bks_model_user_account.c  bks_model_user_account.h
src/model/include/: Bks_Model_Path.h  Bks_Model_Sql.h  Bks_Model_Threading.h
src/ui/: Makefile  Makefile.am  bks_ui.c  controller.c  elm_utils.c  fileselector.c  main.c  notification.c  products_grid.c  products_list.c  products_page.c  products_selected.c  singleton.c  user_accounts_list.c  user_accounts_page.c  utils.c  win.c
src/ui/include/: Bks_Notification.h  Bks_Ui_Private.h  Elm_Utils.h
